# driss_torch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_saturated_casting.py  tst.py
driss_torch/: __init__.py  abstract_impls.py  um_tensor.py
driss_torch/cutlass_gen/: generate.py
src/: add.cu  amax.cu  dynamic_scaled_quant.cu  keyed_random.cu  mx_cast.cu  mx_cast_cudnn.cu  mx_fp8_bf16.cu  register_ops.cpp  saturated_cast.cu  sweep_mm.cu  utils.cu
src/include/: add.h  amax.h  dynamic_scaled_quant.h  keyed_random.h  mx_cast.h  mx_fp8_bf16.h  saturated_cast.h  sweep_mm.h  utils.h
src/scaled_mm_kernels/: dispatch_fp8_rowwise_kernel.cu  dispatch_fp8_rowwise_kernel.h  f8f8bf16_rowwise_kernel.h  generate.py  kernel_f8e4_f8e4_121_TF_FAT_bf16.cu  kernel_f8e4_f8e4_121_TF_FAT_fp32.cu  kernel_f8e4_f8e4_121_TT_FAT_bf16.cu  kernel_f8e4_f8e4_121_TT_FAT_fp32.cu  kernel_f8e4_f8e4_211_TF_FAT_bf16.cu  kernel_f8e4_f8e4_211_TF_FAT_fp32.cu  kernel_f8e4_f8e4_211_TT_FAT_bf16.cu  kernel_f8e4_f8e4_211_TT_FAT_fp32.cu
test/: test_add.py  test_amax.py  test_dynamic_quant.py  test_keyed_random.py  test_mx.py  test_sat_cast.py  test_sweep_mm.py
