[build-system]
requires = ["scikit-build-core>=0.3.3", "torch >= 2.2"]
build-backend = "scikit_build_core.build"

[project]
name = "driss_torch"
version = "0.0.1"
authors = [{ name = "Driss Guessous", email = "drisspguessous@gmail.com" }]
description = "Simple cuda-based pytorch extensions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch >= 2.2",
    "tqdm",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "bumpver",
    "pip-tools",
    "pytest",
    "transformer_nuggets",
]

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
cmake.build-type = "RelWithDebInfo"
build-dir = "build"

[tool.scikit-build.cmake.define]
TORCH_CUDA_ARCH_LIST="9.0"

[tool.usort]
first_party_detection = false

[tool.ruff]
target-version = "py38"
line-length = 99
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
